# wrf-scripts

./: .gitignore  .gitmodules  README.md  TODO.md  build-gsi.py  build-wrf.py  build_gsi.py  build_lib.py  build_upp.py  build_wrf.py  config-wrf.py  config_wps.py  config_wrf.py  config_wrfda.py  config_wrfda_sens.py  config_wrfplus.py  config_wrfvar.py  convert_gdas.py  gen-be.py  gen_be.py  get_gdas.py  get_gfs.py  plot-grids.ncl  plot-wrf.ncl  plot_fso_odb.py  plotgrids_new.ncl  pyproject.toml  requirements.txt  run-real.py  run-wps.py  run-wrf.py  run_3hr_cycle.py  run_fso.py  run_met.py  run_real.py  run_upp.py  run_wps.py  run_wps_geogrid.py  run_wps_ungrib_metgrid.py  run_wrf.py  (+16 more)
cma/: get_gfs.py
config/: namelist.input  namelist.wps  sample_config_3hr_cycle_9-3km.json  sample_config_era5.json  sample_config_fso.json  sample_config_fso_27km.json  sample_config_ose_15km.json  sample_config_wps.json
fso/: plot_fso_odb.py  run_fso.py  write_fso_odb.py
namelists/: namelist.obsproc  namelist.wps  namelist.wrf  namelist.wrfvar  parame.in
operators/: config_wps.py  config_wrf.py  config_wrfda.py  config_wrfda_sens.py  config_wrfplus.py  run_met.py  run_real.py  run_upp.py  run_wps_geogrid.py  run_wps_ungrib_metgrid.py  run_wrf.py  run_wrfda_3dvar.py  run_wrfda_obsproc.py  run_wrfda_update_bc.py  run_wrfplus_ad.py  wrf_operators.py
plots/: plot_common.py  plot_cost_grad_fn.ncl  plot_domains.ncl  plot_gts_omb_oma.py  plot_metfile.ncl  plot_wrf.ncl  plot_wrfda_incr.py
utils/: check_files.py  cli.py  copy_file.py  dict_helpers.py  edit_file.py  ftp_exist.py  mach.py  (+14 more)
(+11 files in other folders)
