[tool.poetry]
name = "wrf-scripts"
version = "1.0.0"
description = "Python scripts for running complex NWP flow with WRF"
authors = ["Li Dong <dongli@longrunweather.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pendulum = "^2.1"
f90nml = "*"
pexpect = "*"
numpy = "*"
psutil = "*"
netCDF4 = "*"
requests = "*"
packaging = "*"
jinja2 = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
